--- a/index.html
+++ b/index.html
@@ -138,7 +138,62 @@
         <!-- 뉴스배경 -->
         <div class="news-bg"></div>
         <!-- 뉴스본내용 -->
-        <div class="news-inner container"></div>
+        <div class="news-inner container clearfix">
+          <div class="news-wrap">
+            <h3>공지사항</h3>
+            <div class="news-content">
+              <ul class="news-list">
+                <li>
+                  <a href="#">
+                    <span class="news-txt">
+                      에스티엑스건설자산관리 주식회사 해산결의에 따른 채권신고
+                      안내 공고 (2차)
+                    </span>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <span class="news-txt">
+                      에스티엑스건설자산관리 주식회사 해산결의에 따른 채권신고
+                      안내 공고 (1차)
+                    </span>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <span class="news-txt"> 2021년도 협력업체 모집공고 </span>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <span class="news-txt"> STX건설 상호 사용 관련 안내 </span>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="news-wrap">
+            <h3>보도자료</h3>
+            <div class="news-content">
+              <ul class="news-list">
+                <li>
+                  <a href="#">
+                    <span class="news-txt">
+                      STX건설, 춘천 레고랜드 테마파크 시공사 ‘선정’
+                    </span>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <span class="news-txt">
+                      STX건설, 2018년 성장 '청신호'
+                    </span>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
       </section>
       <!-- 고객센터 -->
       <section class="cs">
